[tool.poetry]
name = "pyraft"
version = "0.1.0"
description = "Raft algorithm implementation in Python"
authors = [
    "Nikolay Repin <n.repin@g.nsu.ru>"
]

readme = "README.md"

packages = [
    { include = "pyraft" },
]

[tool.poetry.scripts]
pyraft = 'pyraft.main:main'

[tool.poetry.dependencies]
python = "^3.12"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
