[tool.poetry]
name = "pyraft"
version = "0.1.0"
description = "Raft algorithm implementation in Python"
authors = [
    "Nikolay Repin <n.repin@g.nsu.ru>"
]

readme = "README.md"

packages = [
    { include = "pyraft" },
]

[tool.poetry.scripts]
pyraft-client = "pyraft.client.main:main"
pyraft-server = "pyraft.server.main:main"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "2.10.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
